Ready to deploy

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     <section id="profile">
         <!-- Profile Picture Section -->
         <div class="section_pic_container">
-            <img src="Assets/praju.jpeg" alt="Prajakta Magar" />
+            <img src="Assets/praju.jpeg" alt="Prajakta Magar"/>
         </div>
 
         <!-- Profile Text Section -->
@@ -106,7 +106,7 @@
                         <ul>
                             <li>Certification in “HTML and CSS for beginners” by udemy.</li>
                             <li>"The Ultimate JavaScript Course" by Code with Harry.</li>
-                            <li>"Master in React“ by Code with Harry.</li>
+                            <li>"Chai aur React" by Hitesh Choudhary.</li>
                         </ul>
                     </div>
                     <div class="detailes-containers">
@@ -114,8 +114,10 @@
                         <h3>Technical Skills</h3>
                         <ul>
                             <li>Programming Languages: Java, JavaScript </li>
-                            <li> Web Technologies: HTML, CSS , ReactJS , Bootstrap </li>
-                            <li> Other Technologies: Git , GitHub </li>
+                            <li> Web Technologies: HTML, CSS(Basic) ,Tailwind css, Bootstrap </li>
+                            <li> Version Control: Git , GitHub </li>
+                            <li>Frontend Frameworks and Libraries:
+                                ReactJS (including React Redux Toolkit, Context API, and advanced React concepts)</li>
                         </ul>
                     </div>
                 </div>
@@ -222,10 +224,10 @@
                 <div class="article-container">
                     <img src="Assets/sneakers1.jpg" alt =project class="project-img">
                </div>
-               <h2 class="experience-sub-title project-title">PK Sneakers store</h2>
+               <h2 class="experience-sub-title project-title">Sneakers-store</h2>
                 <div class="button-container">
                     <button class="butON project-btn" onclick="location.href='https://github.com/prajakta7magar'";>Github</button>
-                    <button class="butON project-btn" onclick="location.href='https://github.com/prajakta7magar'";>Live Demo</button>
+                    <button class="butON project-btn" onclick="location.href='https://github.com/prajakta7magar/sneakers-store'";>Live Demo</button>
                     </button>
                 </div>
             </div>
@@ -234,12 +236,12 @@
         <div class="experience-detailes-container">
             <div class="pr-detailes-containers color-containers">
                 <div class="article-container">
-                    <img src="Assets/spotify.jpg" alt =project class="project-img">
+                    <img src="Assets\todo.jpg" alt =project class="project-img">
                </div>
-               <h2 class="experience-sub-title project-title">Project 2</h2>
+               <h2 class="experience-sub-title project-title">To-Do-RTK</h2>
                 <div class="button-container">
                     <button class="butON project-btn" onclick="location.href='https://github.com/prajakta7magar'";>Github</button>
-                    <button class="butON project-btn" onclick="location.href='https://github.com/prajakta7magar'";>Live Demo</button>
+                    <button class="butON project-btn" onclick="location.href='https://github.com/prajakta7magar/ToDo-RTK.git'";>Live Demo</button>
                     </button>
                 </div>
             </div>
