--- a/index.html
+++ b/index.html
@@ -117,7 +117,8 @@
                             <li> Web Technologies: HTML, CSS(Basic) ,Tailwind css, Bootstrap </li>
                             <li> Version Control: Git , GitHub </li>
                             <li>Frontend Frameworks and Libraries:
-                                ReactJS (including React Redux Toolkit, Context API, and advanced React concepts)</li>
+                                ReactJS <br>(including React Redux Toolkit, Context API,
+                                <br> and advanced React concepts)</li>
                         </ul>
                     </div>
                 </div>
