--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 
             <!-- Buttons Section -->
             <div class="button-container">
-                <button class="butON" onclick="window.open('Assets/Prajakta-Resume1.pdf')">Download
+                <button class="butON" onclick="window.open('Assets/Prajakta-final-resume.pdf')">Download
                     CV</button>
                 <button class="butON" onclick="location.href='#contact'">Contact Info</button>
             </div>
@@ -227,8 +227,8 @@
                </div>
                <h2 class="experience-sub-title project-title">Sneakers-store</h2>
                 <div class="button-container">
-                    <button class="butON project-btn" onclick="location.href='https://github.com/prajakta7magar'";>Github</button>
-                    <button class="butON project-btn" onclick="location.href='https://github.com/prajakta7magar/sneakers-store'";>Live Demo</button>
+                    <button class="butON project-btn" onclick="location.href='https://github.com/prajakta7magar/sneakers-store'";>Github</button>
+                    <button class="butON project-btn" onclick="location.href='https://prajakta7magar.github.io/sneakers-store/'";>Live Demo</button>
                     </button>
                 </div>
             </div>
@@ -241,8 +241,8 @@
                </div>
                <h2 class="experience-sub-title project-title">To-Do-RTK</h2>
                 <div class="button-container">
-                    <button class="butON project-btn" onclick="location.href='https://github.com/prajakta7magar'";>Github</button>
-                    <button class="butON project-btn" onclick="location.href='https://github.com/prajakta7magar/ToDo-RTK.git'";>Live Demo</button>
+                    <button class="butON project-btn" onclick="location.href='https://github.com/prajakta7magar/ToDo-RTK/tree/master'";>Github</button>
+                    <button class="butON project-btn" onclick="location.href='https://redux-toolkit-todo-br61elc3z-prajaktas-projects-67b0fb5e.vercel.app/'";>Live Demo</button>
                     </button>
                 </div>
             </div>
@@ -251,12 +251,12 @@
         <div class="experience-detailes-container">
             <div class="pr-detailes-containers color-containers">
                 <div class="article-container">
-                    <img src="Assets/person-scanning-qr-code.jpg" alt =project class="project-img">
+                    <img src="Assets\password.png" alt =project class="project-img">
                </div>
-               <h2 class="experience-sub-title project-title">Project 3</h2>
+               <h2 class="experience-sub-title project-title">Password Generator</h2>
                 <div class="button-container">
-                    <button class="butON project-btn" onclick="location.href='https://github.com/prajakta7magar'";>Github</button>
-                    <button class="butON project-btn" onclick="location.href='https://github.com/prajakta7magar'";>Live Demo</button>
+                    <button class="butON project-btn" onclick="location.href='https://github.com/prajakta7magar/Password_generator'";>Github</button>
+                    <button class="butON project-btn" onclick="location.href='https://04-password-generator-98jgodstr-prajaktas-projects-67b0fb5e.vercel.app/'";>Live Demo</button>
                     </button>
                 </div>
             </div>
