--- a/index.html
+++ b/index.html
@@ -255,7 +255,9 @@
                </div>
                <h2 class="experience-sub-title project-title">Password Generator</h2>
                 <div class="button-container">
-                    <button class="butON project-btn" onclick="location.href='https://github.com/prajakta7magar/Password_generator'";>Github</button>
+                    <button class="butON project-btn" onclick="location.href='';">Github</button>
+
+                    <button class="butON project-btn" onclick="location.href='https://github.com/prajakta7magar/Password_generator/tree/master'";>Github</button>
                     <button class="butON project-btn" onclick="location.href='https://04-password-generator-98jgodstr-prajaktas-projects-67b0fb5e.vercel.app/'";>Live Demo</button>
                     </button>
                 </div>
