index.html updated

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     </nav>
     
         <div id="top-nav">
-        <div class="logo1">Prajakta Magar</div>
+        <div class="logo1">Prajakta Kurle</div>
             <div class="menu-links">
                 <a href="#about">About</a>
                 <a href="#experience">Experience</a>
@@ -49,7 +49,7 @@
         <!-- Profile Text Section -->
         <div class="section_text_container">
             <p class="section_text_p1">Hello, I am</p>
-            <h1 class="title">Prajakta Magar</h1>
+            <h1 class="title">Prajakta kurle</h1>
             <p class="section_text_p2">Front-end Developer</p>
 
 
@@ -63,7 +63,7 @@
             <!-- Social Media Icons Section -->
             <div id="social-container">
                 <img src="Assets/githubicon1.png" alt="GitHub" class="icon giticon"
-                    onclick="location.href='https://github.com/prajakta7magar'">
+                    onclick="location.href='https://github.com/Prajakta-kurle'">
 
                 <img src="Assets/linkdinicon.jpg" alt="LinkedIn" class="icon linkdinicon"
                     onclick="location.href='https://www.linkedin.com/in/prajakta-kurle-9a169b24a/'">
@@ -227,8 +227,8 @@
                </div>
                <h2 class="experience-sub-title project-title">Sneakers-store</h2>
                 <div class="button-container">
-                    <button class="butON project-btn" onclick="location.href='https://github.com/prajakta7magar/sneakers-store'";>Github</button>
-                    <button class="butON project-btn" onclick="location.href='https://prajakta7magar.github.io/sneakers-store/'";>Live Demo</button>
+                    <button class="butON project-btn" onclick="location.href='https://github.com/Prajakta-kurle/sneakers-store'";>Github</button>
+                    <button class="butON project-btn" onclick="location.href='https://prajakta-kurle.github.io/sneakers-store/'";>Live Demo</button>
                     </button>
                 </div>
             </div>
@@ -241,7 +241,7 @@
                </div>
                <h2 class="experience-sub-title project-title">To-Do-RTK</h2>
                 <div class="button-container">
-                    <button class="butON project-btn" onclick="location.href='https://github.com/prajakta7magar/ToDo-RTK/tree/master'";>Github</button>
+                    <button class="butON project-btn" onclick="location.href='https://github.com/Prajakta-kurle/ToDo-RTK/tree/master'";>Github</button>
                     <button class="butON project-btn" onclick="location.href='https://redux-toolkit-todo-br61elc3z-prajaktas-projects-67b0fb5e.vercel.app/'";>Live Demo</button>
                     </button>
                 </div>
@@ -255,9 +255,7 @@
                </div>
                <h2 class="experience-sub-title project-title">Password Generator</h2>
                 <div class="button-container">
-                    <button class="butON project-btn" onclick="location.href='';">Github</button>
-
-                    <button class="butON project-btn" onclick="location.href='https://github.com/prajakta7magar/Password_generator/tree/master'";>Github</button>
+                    <button class="butON project-btn" onclick="location.href='https://github.com/Prajakta-kurle/Password_generator'";>Github</button>
                     <button class="butON project-btn" onclick="location.href='https://04-password-generator-98jgodstr-prajaktas-projects-67b0fb5e.vercel.app/'";>Live Demo</button>
                     </button>
                 </div>
