--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 
             <!-- Buttons Section -->
             <div class="button-container">
-                <button class="butON" onclick="window.open('Assets\Prajakta-final-resume-1.pdf')">Download
+                <button class="butON" onclick="window.open('Assets/Prajakta-final-resume-1.pdf')">Download
                     CV</button>
                 <button class="butON" onclick="location.href='#contact'">Contact Info</button>
             </div>
