--- a/index.html
+++ b/index.html
@@ -278,10 +278,10 @@
                 <div class="card">
                     <img src="Assets/sneakers1.jpg" class="card-img-top project-img" alt="PK Sneakers store">
                     <div class="card-body">
-                        <h5 class="card-title">PK Sneakers store</h5>
+                        <h5 class="card-title"> Sneakers store</h5>
                         <div class="button-container">
-                            <button class="butON project-btn" onclick="location.href='https://github.com/prajakta7magar'">Github</button>
-                            <button class="butON project-btn" onclick="location.href='https://github.com/prajakta7magar'">Live Demo</button>
+                            <button class="butON project-btn" onclick="location.href='https://github.com/Prajakta-kurle/sneakers-store'">Github</button>
+                            <button class="butON project-btn" onclick="location.href='https://prajakta-kurle.github.io/sneakers-store/'">Live Demo</button>
                         </div>
                     </div>
                 </div>
@@ -292,10 +292,10 @@
                 <div class="card">
                     <img src="Assets/spotify.jpg" class="card-img-top project-img" alt="Project 2">
                     <div class="card-body">
-                        <h5 class="card-title">Project 2</h5>
+                        <h5 class="card-title">To-Do-RTK</h5>
                         <div class="button-container">
-                            <button class="butON project-btn" onclick="location.href='https://github.com/prajakta7magar'">Github</button>
-                            <button class="butON project-btn" onclick="location.href='https://github.com/prajakta7magar'">Live Demo</button>
+                            <button class="butON project-btn" onclick="location.href='https://github.com/Prajakta-kurle/ToDo-RTK/tree/master'">Github</button>
+                            <button class="butON project-btn" onclick="location.href='https://redux-toolkit-todo-br61elc3z-prajaktas-projects-67b0fb5e.vercel.app/'">Live Demo</button>
                         </div>
                     </div>
                 </div>
@@ -306,10 +306,10 @@
                 <div class="card">
                     <img src="Assets/person-scanning-qr-code.jpg" class="card-img-top project-img" alt="Project 3">
                     <div class="card-body">
-                        <h5 class="card-title">Project 3</h5>
+                        <h5 class="card-title">Password Generator</h5>
                         <div class="button-container">
-                            <button class="butON project-btn" onclick="location.href='https://github.com/prajakta7magar'">Github</button>
-                            <button class="butON project-btn" onclick="location.href='https://github.com/prajakta7magar'">Live Demo</button>
+                            <button class="butON project-btn" onclick="location.href='https://github.com/Prajakta-kurle/Password_generator'">Github</button>
+                            <button class="butON project-btn" onclick="location.href='https://04-password-generator-98jgodstr-prajaktas-projects-67b0fb5e.vercel.app/'">Live Demo</button>
                         </div>
                     </div>
                 </div>
