--- a/index.html
+++ b/index.html
@@ -290,7 +290,7 @@
             <!-- Project 2 -->
             <div class="carousel-item">
                 <div class="card">
-                    <img src="Assets/spotify.jpg" class="card-img-top project-img" alt="Project 2">
+                    <img src="Assets\todo.jpg" class="card-img-top project-img" alt="Project 2">
                     <div class="card-body">
                         <h5 class="card-title">To-Do-RTK</h5>
                         <div class="button-container">
@@ -304,7 +304,7 @@
             <!-- Project 3 -->
             <div class="carousel-item">
                 <div class="card">
-                    <img src="Assets/person-scanning-qr-code.jpg" class="card-img-top project-img" alt="Project 3">
+                    <img src="Assets\password.png" class="card-img-top project-img" alt="Project 3">
                     <div class="card-body">
                         <h5 class="card-title">Password Generator</h5>
                         <div class="button-container">
