--- a/index.html
+++ b/index.html
@@ -49,13 +49,13 @@
         <!-- Profile Text Section -->
         <div class="section_text_container">
             <p class="section_text_p1">Hello, I am</p>
-            <h1 class="title">Prajakta Magar</h1>
+            <h1 class="title">Prajakta Kurle</h1>
             <p class="section_text_p2">Front-end Developer</p>
 
 
             <!-- Buttons Section -->
             <div class="button-container">
-                <button class="butON" onclick="window.open('Assets/Prajakta-Resume1.pdf')">Download
+                <button class="butON" onclick="window.open('Assets/Blue and Gray Simple Professional CV Resume.pdf')">Download
                     CV</button>
                 <button class="butON" onclick="location.href='#contact'">Contact Info</button>
             </div>
